# Game_Fragmented_Soul

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  打完
.github/workflows/: cmake-single-platform.yml
core/include/: FSM.hpp  animation.hpp  atlas.hpp  camera.hpp  collision_box.hpp  collision_manager.hpp  constant.hpp  game.hpp  game_object.hpp  input_system.hpp  resource_manager.hpp  scene.hpp  scene_manager.hpp  sdl_wrapped.hpp  standard_type.hpp  test.hpp  time_tool.hpp  timer.hpp  vector2.hpp
core/src/: animation.cpp  atlas.cpp  camera.cpp  game.cpp  input_system.cpp  resource_manager.cpp  scene_manager.cpp  time_tool.cpp  timer.cpp
example/: CMakeLists.txt  main.cpp
example/include/: game.hpp  role.hpp  test_scene.hpp  trap.hpp
example/src/: game.cpp  role.cpp  test_scene.cpp  trap.cpp
